// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecoverTransaction render should disable "Recover" button 1`] = `
<v-form>
  <v-textarea
    label="RLP encoded transaction"
    v-model="transactionHash"
  />
   
  <v-button
    class-name="is-primary is-medium"
    disabled="true"
  >
    
    Recover transaction
  
  </v-button>
   
  <!---->
</v-form>
`;

exports[`RecoverTransaction render should enable "Recover" button 1`] = `
<v-form>
  <v-textarea
    label="RLP encoded transaction"
    v-model="transactionHash"
  />
   
  <v-button
    class-name="is-primary is-medium"
  >
    
    Recover transaction
  
  </v-button>
   
  <!---->
</v-form>
`;

exports[`RecoverTransaction render should render the initial state of the component 1`] = `
<v-form>
  <v-textarea
    label="RLP encoded transaction"
    v-model="transactionHash"
  />
   
  <v-button
    class-name="is-primary is-medium"
    disabled="true"
  >
    
    Recover transaction
  
  </v-button>
   
  <!---->
</v-form>
`;

exports[`RecoverTransaction render should show restored transaction data 1`] = `
<v-form>
  <v-textarea
    label="RLP encoded transaction"
    v-model="transactionHash"
  />
   
  <v-button
    class-name="is-primary is-medium"
    disabled="true"
  >
    
    Recover transaction
  
  </v-button>
   
  <v-textarea
    disabled=""
    label="Recovered transaction"
    v-model="recoveredTransactionString"
  />
</v-form>
`;
